Criando a página comentário

--- a/templates/principal.html
+++ b/templates/principal.html
@@ -51,7 +51,7 @@
           Sobre nós
         </a>
 
-        <div class="navbar-item has-dropdown is-hoverable">
+        <div class="navbar-menu">
           <a class="navbar-link">
             More
           </a>
