--- a/templates/login.html
+++ b/templates/login.html
@@ -106,14 +106,14 @@
         <div class="field">
             <label class="label">Email</label>
             <div class="control">
-                <input class="input" type="email" placeholder="e.g. alex@example.com" />
+                <input class="input" type="email" placeholder="E-Mail" name="email" />
             </div>
         </div>
 
         <div class="field">
             <label class="label">Senha</label>
             <div class="control">
-                <input class="input" type="senha" placeholder="********" />
+                <input class="input" type="password" placeholder="password" name="senha" />
             </div>
         </div>
 
